// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/mention/demo/async.md correctly 1`] = `
<div
  class="alu-mention-wrapper"
  style="width:100%"
>
  <div
    class="alu-mention-editor oneline"
    style="width:100%"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/avatar.md correctly 1`] = `
<div
  class="alu-mention-wrapper"
  style="width:100%"
>
  <div
    class="alu-mention-editor oneline"
    style="width:100%"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/basic.md correctly 1`] = `
<div
  class="alu-mention-wrapper"
  style="width:100%"
>
  <div
    class="alu-mention-editor oneline"
    style="width:100%"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span>
                    <span
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-text="true"
                      >
                        @afc163
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/controllder-simple.md correctly 1`] = `
<div
  class="alu-mention-wrapper"
>
  <div
    class="alu-mention-editor oneline"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span>
                    <span
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-text="true"
                      >
                        @afc163
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/controlled.md correctly 1`] = `
<form
  class="alu-form alu-form-horizontal"
>
  <div
    class="alu-row alu-form-item"
  >
    <div
      class="alu-col-6 alu-form-item-label"
    >
      <label
        class=""
        for="control-mention"
        title="Top coders"
      >
        Top coders
      </label>
    </div>
    <div
      class="alu-col-16 alu-form-item-control-wrapper"
    >
      <div
        class="alu-form-item-control has-success"
      >
        <span
          class="alu-form-item-children"
        >
          <div
            class="alu-mention-wrapper"
          >
            <div
              class="alu-mention-editor oneline"
            >
              <div
                class="alu-mention-toolbar"
              />
              <div
                class="alu-mention-editor-wrapper"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-describedby="placeholder-123"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="textbox"
                      spellcheck="false"
                      style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span>
                              <span
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-text="true"
                                >
                                  @afc163
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    class="alu-row alu-form-item"
  >
    <div
      class="alu-col-14 alu-col-offset-6 alu-form-item-control-wrapper"
    >
      <div
        class="alu-form-item-control"
      >
        <span
          class="alu-form-item-children"
        >
          <button
            class="alu-btn alu-btn-primary"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
             
          <button
            class="alu-btn"
            type="button"
          >
            <span>
              Reset
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/mention/demo/custom-tag.md correctly 1`] = `
<div
  class="alu-mention-wrapper"
  style="width:100%"
>
  <div
    class="alu-mention-editor oneline"
    style="width:100%"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="public-DraftEditorPlaceholder-root"
        >
          <div
            class="public-DraftEditorPlaceholder-inner"
            id="placeholder-123"
            style="white-space:pre-wrap"
          >
            @someone
          </div>
        </div>
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/multilines.md correctly 1`] = `
<div
  class="alu-mention-wrapper multilines"
  style="width:100%;height:100px"
>
  <div
    class="alu-mention-editor"
    style="width:100%;height:100px"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%;height:100px"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/multiple-trigger.md correctly 1`] = `
<div
  class="alu-mention-wrapper"
  style="width:100%"
>
  <div
    class="alu-mention-editor oneline"
    style="width:100%"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="public-DraftEditorPlaceholder-root"
        >
          <div
            class="public-DraftEditorPlaceholder-inner"
            id="placeholder-123"
            style="white-space:pre-wrap"
          >
            input @ to mention people, # to mention tag
          </div>
        </div>
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/placement.md correctly 1`] = `
<div
  class="alu-mention-placement-top alu-mention-wrapper"
  style="width:100%"
>
  <div
    class="alu-mention-editor oneline"
    style="width:100%"
  >
    <div
      class="alu-mention-toolbar"
    />
    <div
      class="alu-mention-editor-wrapper"
      style="width:100%"
    >
      <div
        class="DraftEditor-root"
      >
        <div
          class="DraftEditor-editorContainer"
        >
          <div
            aria-describedby="placeholder-123"
            class="notranslate public-DraftEditor-content"
            contenteditable="true"
            role="textbox"
            spellcheck="false"
            style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
          >
            <div
              data-contents="true"
            >
              <div
                class=""
                data-block="true"
                data-editor="123"
                data-offset-key="123-0-0"
              >
                <div
                  class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                  data-offset-key="123-0-0"
                >
                  <span
                    data-offset-key="123-0-0"
                  >
                    <br
                      data-text="true"
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/mention/demo/popupContainer.md correctly 1`] = `
<button
  class="alu-btn alu-btn-primary"
  type="button"
>
  <span>
    Click Me
  </span>
</button>
`;

exports[`renders ./components/mention/demo/readonly.md correctly 1`] = `
<div>
  <div
    style="margin-bottom:10px"
  >
    <div
      class="alu-mention-wrapper disabled"
      style="width:100%"
    >
      <div
        class="alu-mention-editor readonly oneline"
        style="width:100%"
      >
        <div
          class="alu-mention-toolbar"
        />
        <div
          class="alu-mention-editor-wrapper"
          style="width:100%"
        >
          <div
            class="DraftEditor-root"
          >
            <div
              class="public-DraftEditorPlaceholder-root"
            >
              <div
                class="public-DraftEditorPlaceholder-inner"
                id="placeholder-123"
                style="white-space:pre-wrap"
              >
                this is disabled Mention
              </div>
            </div>
            <div
              class="DraftEditor-editorContainer"
            >
              <div
                aria-describedby="placeholder-123"
                class="public-DraftEditor-content"
                contenteditable="false"
                spellcheck="false"
                style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
              >
                <div
                  data-contents="true"
                >
                  <div
                    class=""
                    data-block="true"
                    data-editor="123"
                    data-offset-key="123-0-0"
                  >
                    <div
                      class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                      data-offset-key="123-0-0"
                    >
                      <span
                        data-offset-key="123-0-0"
                      >
                        <br
                          data-text="true"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <input
            style="width:0;opacity:0;border:0;position:absolute;left:0;top:0"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="alu-mention-wrapper readonly"
    style="width:100%"
  >
    <div
      class="alu-mention-editor readonly oneline"
      style="width:100%"
    >
      <div
        class="alu-mention-toolbar"
      />
      <div
        class="alu-mention-editor-wrapper"
        style="width:100%"
      >
        <div
          class="DraftEditor-root"
        >
          <div
            class="public-DraftEditorPlaceholder-root"
          >
            <div
              class="public-DraftEditorPlaceholder-inner"
              id="placeholder-123"
              style="white-space:pre-wrap"
            >
              this is readOnly Mention
            </div>
          </div>
          <div
            class="DraftEditor-editorContainer"
          >
            <div
              aria-describedby="placeholder-123"
              class="public-DraftEditor-content"
              contenteditable="false"
              spellcheck="false"
              style="outline:none;user-select:text;-webkit-user-select:text;white-space:pre-wrap;word-wrap:break-word"
            >
              <div
                data-contents="true"
              >
                <div
                  class=""
                  data-block="true"
                  data-editor="123"
                  data-offset-key="123-0-0"
                >
                  <div
                    class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                    data-offset-key="123-0-0"
                  >
                    <span
                      data-offset-key="123-0-0"
                    >
                      <br
                        data-text="true"
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <input
          style="width:0;opacity:0;border:0;position:absolute;left:0;top:0"
        />
      </div>
    </div>
  </div>
</div>
`;
